# yus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  NOTES.md  README.md  TODOS.md  Trunk.toml  flake.nix  fly.toml  index.html  tailwind.config.js
.github/workflows/: deploy.yml
site/: Cargo.toml
site/src/: languages.rs  main.rs
site/src/api/: projects.rs  repos.graphql
src/: main.rs
ui/: Cargo.toml  index.html  tailwind.config.js
ui/src/: app.rs  lib.rs  routes.rs
ui/src/components/: demo.rs  demos_menu.rs  mod.rs  shader_editor.rs
ui/src/components/demos/: animals.rs  cube.rs  frag_intro.rs  mod.rs  shader_editor.rs  utils.rs
ui/src/components/demos/animals/: main.rs  utils.rs  view.rs
ui/src/components/demos/frag_intro/: main.rs  mod.rs
ui/src/components/demos/mandelbrot/: main.rs
ui/src/components/demos/planet/: main.rs
ui/src/components/shader_editor/: mod.rs  utils.rs  view.rs
ui/src/meshes/: animals.rs  cube.rs  mod.rs  quad.rs  strip.rs  utils.rs
ui/src/pages/: home.rs  mod.rs
ui/src/pages/classic/: classic.rs
ui/src/pages/demos/: cube.rs  mod.rs  utils.rs
ui/src/render/: mod.rs  web_gpu.rs
ui/src/render/renderer/: camera.rs  camera_input.rs  instance.rs  mesh.rs  mod.rs  uniform.rs  vertex.rs
ui/src/render/renderer/gpu/: gpu_state.rs  mod.rs  resource_context.rs  surface_context.rs  utils.rs  vertex_ctx.rs
ui/src/render/renderer/shaders/: cube.frag.wgsl  cube.vert.wgsl  debug_points.frag.wgsl  debug_points.vert.wgsl  fish.frag.wgsl  fish.vert.wgsl  frag_intro.frag.wgsl  octahedral.frag.wgsl
ui/style/: fonts.css  tailwind.css
