[workspace]
resolver = "2"
members   = ["site", "ui"]

[workspace.dependencies]
leptos         = { version = "0.8.2", default-features = false, features = ["csr","ssr"] }
leptos_router  = "0.8.2"
leptos_meta    = "0.8.2"
leptos_actix   = "0.8.2"
actix-files    = "0.6.6"
wgpu           = { version = "25.0", features = ["webgpu"] }
pollster       = "0.4"
wasm-bindgen   = "0.2"
console_error_panic_hook = "0.1"
env_logger     = "0.11"
log            = "0.4"
anyhow         = "1.0"
