[workspace]
resolver = "2"
members   = ["site", "ui"]

# TODO: cleanup unused libs
[workspace.dependencies]
leptos        = { version = "0.8.2", features = ["csr"] }
leptos_router = "0.8.2"
leptos_meta   = "0.8.2"
leptos_actix  = "0.8.2"
actix-files   = "0.6.6"
wgpu          = { version = "25.0", features = ["webgpu", "webgl"] }
pollster      = "0.4"
wasm-bindgen  = "0.2"
console_error_panic_hook = "0.1"
env_logger    = "0.11"
log           = "0.4"
anyhow        = "1.0"
glam          = "0.30.3"
bytemuck      = "1.23"
image         = "0.25.6"
wasm-bindgen-futures = "0.4.50"
gloo-timers   = { version = "0.3.0", features = ["futures"] }
web-sys       = { version = "0.3.77", features = [
  "Window",
  "Navigator",
  "Performance",
  "MediaQueryList",
  "HtmlElement",
  "Element",
  "DomRect",
]}
serde = {  version = "1.0.219", features = ["derive"] }
