[package]
name    = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos        = { workspace = true, features = ["ssr"] }
leptos_actix  = { workspace = true }
actix-files.workspace = true
actix-web     = { version = "4.11", features = ["macros"] }
env_logger    = { workspace = true }
log           = { workspace = true }
anyhow        = { workspace = true }
serde =  { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
dotenvy = "0.15.7"
