[package]
name    = "site"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos        = { workspace = true, features = ["ssr"] }
leptos_actix  = { workspace = true }
actix-files.workspace = true
actix-web     = { version = "4.11", features = ["macros"] }
env_logger    = { workspace = true }
log           = { workspace = true }
anyhow        = { workspace = true }
serde.workspace = true
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
dotenvy = "0.15.7"
octocrab = "0.44.1"
chrono = { version = "0.4.41", features = ["serde"]}
once_cell = "1.21.3"
