[package]
name    = "ui"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos                       = { workspace = true, features = ["csr","ssr"] }
leptos_router                = { workspace = true }
leptos_meta                  = { workspace = true }
wgpu                         = { workspace = true, features = ["webgpu"] }
wasm-bindgen                 = { workspace = true }
console_error_panic_hook     = { workspace = true }
pollster                     = { workspace = true }
anyhow                       = { workspace = true }
glam                         = { workspace = true }
bytemuck                     = { workspace = true }
image                        = { workspace = true }
wasm-bindgen-futures         = { workspace = true }
gloo-timers                  = { workspace = true , features = ["futures"] }
web-sys                      = { workspace = true , features = [ "Window", "Performance" ]}
