[package]
name    = "ui"
version = "0.2.1"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos                       = { workspace = true, features = ["csr","ssr"] }
leptos_router                = { workspace = true }
leptos_meta                  = { workspace = true }
wgpu                         = { workspace = true, features = ["webgpu"], optional = true }
wasm-bindgen                 = { workspace = true, optional = true }
console_error_panic_hook     = { workspace = true }
pollster                     = { workspace = true }
anyhow                       = { workspace = true }
glam                         = { workspace = true }
bytemuck                     = { workspace = true }
image                        = { workspace = true }
wasm-bindgen-futures         = { workspace = true }
gloo-timers                  = { workspace = true , features = ["futures"], optional = true }
web-sys                      = { workspace = true , features = [ 
  "Window", "Performance",
    "HtmlElement",
    "Element",
    "DomRect",
], optional = true }
leptos-use = "0.16.2"


[features]
web = [
  "dep:wgpu",
  "dep:wasm-bindgen",
  "dep:web-sys",
  "dep:gloo-timers",
]

default = ["web"]           # so plain `cargo test` or `cargo build` works
